--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,12 @@ html {
 }
 
 body {
-  margin-top: 50vh;
-  transform: translateY(-50%);
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-rows: auto auto;
+  place-content: center;
 }
 
 main {
@@ -29,7 +33,6 @@ main {
   font-weight: bold;
   position: absolute;
   left: calc((50% - 640px / 2) + 32px);
-  top: 1ch;
 }
 
 .backButton:hover {
