Fix clients with width >1920px
- A media query at the bottom broke the site when the window is fullscreen
on desktop

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -515,7 +515,7 @@ main {
 
 @media screen and (min-width: 1920px) {
   body {
-    transform: scale(1.2) translateY(-40%);
+    transform: scale(1.2);
   }
 
   main {
