--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,7 +7,7 @@ html {
 /* force body to take up entire screen */
 body {
   margin: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: grid;
   grid-template-rows: auto auto;
