--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,8 +7,8 @@ html {
 /* force body to take up entire screen */
 body {
   margin: 0;
-  height: 100%;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   display: grid;
   grid-template-rows: auto auto;
   place-content: center;
