remove underlines from underlineHover class when not hovered on
also add a link to mainpage as requested

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -76,6 +76,10 @@ main {
   background-color: var(--orange);
 }
 
+.underlineHover {
+	text-decoration: none;
+}
+
 .underlineHover:hover {
   text-decoration: underline;
 }
