--- a/styles/dark.css
+++ b/styles/dark.css
@@ -283,8 +283,9 @@ main {
 
 #image_viewer .viewing {
   display: block;
-  max-height: 80vh;
-  max-width: 80vh;
+  object-fit: contain;
+  max-width: 80vw;
+  max-height: 80vw;
 }
 
 #image_viewer button {
@@ -650,6 +651,28 @@ main {
 
   .prices {
     padding: 8px;
+  }
+
+  #image_viewer {
+	  grid-template-columns: 33vw 33vw 33vw;
+	  grid-template-rows: min-content 64px;
+	  align-content: center;
+  }
+  #image_viewer .viewing {
+	  max-width: 100vw;
+	  max-height: 80vh;
+  }
+  #image_viewer button {
+	  grid-row: 2 / 3;
+	  width: 100%;
+  }
+  #image_viewer button:not(#image_viewer_quit_btn) {
+	  height: 64px;
+  }
+  #image_viewer_quit_btn {
+	  grid-column: 3/4;
+	  top: auto;
+	  right: auto;
   }
 }
 
